Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)

Version 1.6.0 - 2010-05-13
* Bug fixes (see mercurial logs for details)

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)
* Fix digits of start and end balance

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)

Version 1.0.0 - 2009-05-01
* Initial release