@@ -9,6 +9,7 @@ if os.path.isdir(DIR):
     sys.path.insert(0, os.path.dirname(DIR))
 
 import unittest
+import doctest
 import trytond.tests.test_tryton
 from trytond.tests.test_tryton import test_view
 
@@ -27,10 +28,24 @@ class AccountStatementTestCase(unittest.TestCase):
         '''
         test_view('account_statement')
 
+def doctest_dropdb(test):
+    '''
+    Remove sqlite memory database
+    '''
+    database = SQLiteDatabase().connect()
+    cursor = database.cursor(autocommit=True)
+    try:
+        database.drop(cursor, ':memory:')
+        cursor.commit()
+    finally:
+        cursor.close()
+
 def suite():
     suite = trytond.tests.test_tryton.suite()
     suite.addTests(unittest.TestLoader().loadTestsFromTestCase(
         AccountStatementTestCase))
+    suite.addTests(doctest.DocFileSuite('scenario_account_statement.rst',
+        setUp=doctest_dropdb, tearDown=doctest_dropdb, encoding='utf-8'))
     return suite
 
 if __name__ == '__main__':
